# btc-prediction-xgboost

./: .env  .env.example  .gitignore  LICENSE  README.md  data_fetcher.py  data_preprocessor.py  pyproject.toml
btc_price_prediction/data/: btc_historical_30d.csv  btc_historical_3d.csv
