[tool.poetry]
name = "btc-price-prediction"
version = "0.1.0"
description = "Bitcoin price prediction using XGBoost"
authors = ["SR"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
xgboost = "^2.1.2"
pandas = "^2.2.3"
numpy = "^2.1.3"
scikit-learn = "^1.5.2"
python-dotenv = "^1.0.1"
comet-ml = "^3.47.3"
requests = "^2.32.3"
fire = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
